--- a/src/components/Maps/Maps.css
+++ b/src/components/Maps/Maps.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  padding: 0;
 }
 
 .map-wrapper {
@@ -11,17 +12,43 @@
 
 .esri-attribution__sources {
   display: none;
+  padding: 0;
+
 }
 
 .esri-attribution__powered-by {
   display: none;
-  padding: none;
+  padding: 0;
 }
 
 .esri-view-surface--inset-outline::after {
   display: none;
-  padding: none;
+  padding: 0;
 }
 .esri-view-surface {
-  padding: none;
+  padding: 0;
 } /*esri-view-surface--inset-outline esri-view-surface--touch-none */
+
+.esri-view-surface {
+  padding: 0;
+}
+.esri-view-surface--inset-outline {
+  padding: 0;
+
+}
+.esri-view-surface--touch-none{
+  padding: 0;
+
+}
+
+.esri-ui .calcite-theme-light{
+  padding: 0;
+
+}
+
+.esri-zoom {
+  position: absolute;
+  bottom: 100px;
+  left:0;
+  border-radius: 10px;
+}
