--- a/src/components/Draw/Draw.css
+++ b/src/components/Draw/Draw.css
@@ -14,6 +14,16 @@
     outline: none;
     border: none;
     background-color: #ffd633;
+    display: block;
+    margin-right: 40px;
+    font-size: 16px;
+    line-height: 38px;
+    padding: 0 3px;
+    border-radius: 19px;
+    transition: all 0.5s ease-in-out;
+    border: none;
+    outline: none;
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 0px 1px, rgb(0 0 0 / 5%) 0px 3px 0px 0px;
   }
   
   .action-button {
@@ -52,14 +62,14 @@
   .settings,
   .comment,
   .create {
-    position: relative;
+    
   }
   
   #create-menu {
     position: absolute;
     top: 50px;
-    right: 20px;
-    width: 350px;
+    right: 0;
+    width: 250px;
     min-height: fit-content;
     background-color: white;
     /* display: none; */
@@ -67,6 +77,7 @@
     box-shadow: rgb(0 0 0 / 10%) 0px 0px 0px 1px, rgb(0 0 0 / 5%) 0px 3px 0px 0px;
     /* display: none; */
     z-index: 3;
+    margin-right: 47px;
   }
   
   #layers-menu {
@@ -83,7 +94,7 @@
     height: 38px;
     box-shadow: rgb(0 0 0 / 10%) 0px 0px 0px 1px, rgb(0 0 0 / 5%) 0px 3px 0px 0px;
   }
-  #create-button,
+
   #settings-button,
   #comment-button,
   #profile-button {
@@ -159,4 +170,50 @@
   #create-menu.hidden {
     display: none;
   }
+
+  #create-delete{
+   width: 94px;
+   height: 40px;
+    background-color: transparent ;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 40px;
+    display: none;
+  }
+ 
+
+  #create-draw{
+   background-color: #fafeff;
+    width: 40px;
+    height: 38px;
+    color: green;
+    font-size: 16px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in-out;
+  }
+
+  #create-draw:hover{
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
   
+  #delete-draw{
+    background-color: #fafeff;
+    width: 40px;
+    height: 38px;
+    color: red;
+    font-size: 16px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in-out;
+  }
+
+  #delete-draw:hover{
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
